--- a/src/Components/package.json
+++ b/src/Components/package.json
@@ -5,7 +5,7 @@
   "description": "Single page resume using React",
   "author": {
     "name": "Jason Williams",
-    "email": "info@tegonetworks.co.ke"
+    "email": "networkingtegonetworks.co.ke"
   },
   "keywords": [
     "React",
